description text length test

--- a/metatag.html
+++ b/metatag.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="New 2023 Lotus Emira | Pre-Order 2023 Lotus Emira" />
-    <meta property="og:description" content="The New 2023 Lotus Emira for sale soon at our Lotus dealership in Connecticut. Visit our page and send us a message to pre-order yours today" />
+    <meta property="og:description" content="Welcome to the thrilling next chapter of one of the greatest automotive stories ever told. Learn more about the new Lotus Evija at." />
     <meta property="og:image" content="https://media.dealermasters.com/2deb12847f984d4a598ebbb54f89d626.png" />
     <title>Document</title>
 </head>
