--- a/metatag.html
+++ b/metatag.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="New 2023 Lotus Emira | Pre-Order 2023 Lotus Emira" />
     <meta property="og:description" content="Welcome to the thrilling next chapter of one of the greatest automotive stories ever told. Learn more about the new Lotus Evija at." />
-    <meta property="og:image" content="https://mxs-dm-imagebucket-prod.s3.us-east-2.amazonaws.com/Lotus/OpenGraph/og-evora-banner.png" />
+    <meta property="og:image" content="https://mxs-dm-imagebucket-prod.s3.us-east-2.amazonaws.com/Lotus/OpenGraph/og-evora-banner.jpg" />
     <title>Document</title>
 </head>
 <body>
